--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "homepage": "https://willmharris.github.io/magic-lyrics-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.7",
+    "node": "13.9.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
