changed https to http

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-lyrics-frontend",
-  "homepage": "https://willmharris.github.io/magic-lyrics-frontend",
+  "homepage": "http://willmharris.github.io/magic-lyrics-frontend",
   "version": "0.1.0",
   "private": true,
   "engines": {
